# Sealing-Jutsu

./: .gitignore  CITATION.cff  ETHICS.md  FINAL_FOLDER_README.md  LICENSE  README.md  SECURITY.md  TEST_AND_OPERATE_INSTRUCTIONS.md  generate_workflow_corpus.py  pyproject.toml  requirements.txt  resultspoisoning_test_summary.csv  run_capsuleguard.py  run_llm_experiment.py  run_sensitivity.py  validate_trace_corpus.py
capsule_guard/: __init__.py  adaptive_attacker.py  agents.py  attacker.py  charts.py  compiler.py  config.py  corpus_builder.py  evaluation.py  gap_closure.py  intent.py  llm_experiment.py  llm_providers.py  metrics.py  models.py  planner.py  policy.py  production_backends.py  provenance.py  retrieval_collision.py  risk.py  rules.py  scenarios.py  sensitivity.py  session.py  statistics.py  store.py  text.py  tools.py  vector_backend.py  workflow_corpus.py
data/: agent_trace_corpus_sample.jsonl  workflow_corpus.jsonl
docs/: ADDED_FEATURES.md  ADVANCED_ATTACK_SUITE_REPORT.md  ALL_SCENARIOS_CURRENT_TEST_REPORT.md  BRAINSTORMING_INTENT_BOUND_MEMORY_CAPSULES.md  BRUTAL_TEST_REPORT.md  CODE_GAPS_AND_RESEARCH_ROADMAP.md  CONFERENCE_READINESS_UPGRADE.md  FINAL_SCRIPT_STATUS.md  GAP_CLOSURE_REPORT.md  INDUSTRIAL_GRADE_GAP_CLOSURE.md  INSANE_MODE_SOLUTION_PROOF.md  MEMORY_TRUST_AND_AUTHORIZATION_RULESET.md  ORIGINALITY_AND_CODE_WALKTHROUGH.md  POLICY_HARDENING_GAP_RESPONSE.md  PROBLEM_AND_SOLUTION.md  PUBLICATION_GRADE_EVIDENCE_MODE.md  REAL_WORLD_READINESS.md  REAL_WORLD_READINESS_QUEUE.md  RELATED_WORK_COMPARISON_AND_EVIDENCE_ARGUMENT.md  SCOPE.md  (+9 more)
(+266 files in other folders)
