[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sealing-jutsu"
version = "0.1.0"
description = "Intent-bound memory capsule research prototype for LLM-agent memory poisoning defenses."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Mr-Akuma" }
]
keywords = [
  "llm-agents",
  "memory-poisoning",
  "agent-security",
  "provenance",
  "research-prototype"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security"
]
dependencies = []

[project.optional-dependencies]
paper = [
  "Pillow>=10.0",
  "python-docx>=1.1"
]

[tool.setuptools.packages.find]
include = ["capsule_guard*"]
